--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +22,9 @@
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i"
       rel="stylesheet">
-
+    <link
+      href="/assets/vendor/google fonts/poppins-v23-devanagari_latin_latin-ext/poppins-v23-devanagari_latin_latin-ext-300.woff2"
+      rel="stylesheet">
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -63,8 +66,9 @@
         <div class="d-flex align-items-center gap-3 me-auto">
           <a href="index.html" class="d-flex align-items-center">
             <img
-              src="/project1/assets/img/tasteloop logo.png"
-              alt="TasteLoop" class="img-fluid" style="height: 40px;">
+              src="/assets/img/tasteloop logo.png"
+              alt="TasteLoop" class="img-fluid"
+              style="height: 60px; width: 80px;">
           </a>
           <div class="logo me-auto">
             <h1><a href="index.html">Taste Loop</a></h1></div>
@@ -79,18 +83,18 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
+            <li><a class="nav-link scrollto" href="menuitem.html">Menu</a></li>
             <li><a class="nav-link scrollto" href="#specials">Specials</a></li>
             <li><a class="nav-link scrollto" href="#events">Events</a></li>
-            <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
             <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
+            <li><a class="nav-link scrollto" href="#testimonials">Chefs</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
 
         <!-- CTA Button -->
-        <a href="#book-a-table"
+        <a href="table.html"
           class="book-a-table-btn scrollto d-none d-lg-block">Book a table</a>
       </div>
     </header>
@@ -99,7 +103,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero">
       <div class="hero-container">
-        <div id="heroCarousel" data-bs-interval="3000"
+        <div id="heroCarousel" data-bs-interval="1000"
           class="carousel slide carousel-fade" data-bs-ride="carousel">
 
           <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
@@ -216,7 +220,8 @@
             <div class="col-lg-5 align-items-stretch videoUpload video-box"
               style='background-image: none; padding: 0;'>
               <video class="w-100 h-100" controls autoplay muted>
-                <source src="/project1/assets/img/16362106-hd_1920_1080_30fps.mp4" type="video/mp4">
+                <source src="/assets/img/16362106-hd_1920_1080_30fps.mp4"
+                  type="video/mp4">
                 Your browser does not support the video tag.
               </video>
             </div>
@@ -440,7 +445,7 @@
         <!-- End Menu Section -->
 
         <!-- ======= Specials Section ======= -->
-        <!-- <section id="specials" class="specials">
+        <section id="specials" class="specials">
           <div class="container">
 
             <div class="section-title">
@@ -578,7 +583,7 @@
             </div>
 
           </div>
-        </section> -->
+        </section>
         <!-- End Specials Section -->
 
         <!-- ======= Events Section ======= -->
@@ -970,7 +975,7 @@
 
             <div class="testimonials-slider swiper-container"
               data-aos="fade-up"
-              data-aos-delay="100">
+              data-aos-delay="10">
               <div class="swiper-wrapper">
 
                 <div class="swiper-slide">
@@ -1105,22 +1110,27 @@
 
             <div class="section-title">
               <h2>Get in Touch with <span>TasteLoop</span></h2>
-              <!-- <p>We’d love to hear from you! Whether you're booking a table,
+              <p>We’d love to hear from you! Whether you're booking a table,
                 planning an event, or simply craving your next visit — our
                 team is here to help.
-              </p> -->
+              </p>
 
               <p>Let’s connect — your next great dining experience starts
                 here.</p>
             </div>
           </div>
 
-          <div class="map">
+          <!-- <div class="map">
             <iframe style="border:0; width: 100%; height: 350px;"
               src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
               frameborder="0" allowfullscreen></iframe>
+          </div> -->
+          <div class="map">
+            <iframe style="border:0; width: 100%; overflow: hidden;height: 350px;"
+              src="/assets/img/Google-Maps-How-to-Use-Street-View.webp" scrolling="no"></iframe>
           </div>
-          <!-- 
+
+          
             <div class="container mt-5">
 
               <div class="info-wrap">
@@ -1151,7 +1161,7 @@
                 </div>
               </div>
 
-              <form action="forms/contact.php" method="post" role="form"
+              <!-- <form action="forms/contact.php" method="post" role="form"
                 class="php-email-form">
                 <div class="row">
                   <div class="col-md-6 form-group">
@@ -1180,9 +1190,9 @@
                 </div>
                 <div class="text-center"><button type="submit">Send
                     Message</button></div>
-              </form>
+              </form> -->
 
-            </div> -->
+            </div>
         </section>
         <!-- End Contact Section -->
 
