retouch the project1

--- a/index.html
+++ b/index.html
@@ -1126,42 +1126,43 @@
               frameborder="0" allowfullscreen></iframe>
           </div> -->
           <div class="map">
-            <iframe style="border:0; width: 100%; overflow: hidden;height: 350px;"
-              src="/assets/img/Google-Maps-How-to-Use-Street-View.webp" scrolling="no"></iframe>
+            <iframe
+              style="border:0; width: 100%; overflow: hidden;height: 350px;"
+              src="/assets/img/Google-Maps-How-to-Use-Street-View.webp"
+              scrolling="no"></iframe>
           </div>
 
-          
-            <div class="container mt-5">
+          <div class="container mt-5">
 
-              <div class="info-wrap">
-                <div class="row">
-                  <div class="col-lg-3 col-md-6 info">
-                    <i class="bi bi-geo-alt"></i>
-                    <h4>Location:</h4>
-                    <p>A108 Adam Street<br>New York, NY 535022</p>
-                  </div>
+            <div class="info-wrap">
+              <div class="row">
+                <div class="col-lg-3 col-md-6 info">
+                  <i class="bi bi-geo-alt"></i>
+                  <h4>Location:</h4>
+                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                </div>
 
-                  <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-                    <i class="bi bi-clock"></i>
-                    <h4>Open Hours:</h4>
-                    <p>Monday-Saturday:<br>11:00 AM - 2300 PM</p>
-                  </div>
+                <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
+                  <i class="bi bi-clock"></i>
+                  <h4>Open Hours:</h4>
+                  <p>Monday-Saturday:<br>11:00 AM - 2300 PM</p>
+                </div>
 
-                  <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-                    <i class="bi bi-envelope"></i>
-                    <h4>Email:</h4>
-                    <p>info@example.com<br>contact@example.com</p>
-                  </div>
+                <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
+                  <i class="bi bi-envelope"></i>
+                  <h4>Email:</h4>
+                  <p>info@example.com<br>contact@example.com</p>
+                </div>
 
-                  <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-                    <i class="bi bi-phone"></i>
-                    <h4>Call:</h4>
-                    <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
-                  </div>
+                <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
+                  <i class="bi bi-phone"></i>
+                  <h4>Call:</h4>
+                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
                 </div>
               </div>
+            </div>
 
-              <!-- <form action="forms/contact.php" method="post" role="form"
+            <!-- <form action="forms/contact.php" method="post" role="form"
                 class="php-email-form">
                 <div class="row">
                   <div class="col-md-6 form-group">
@@ -1192,7 +1193,7 @@
                     Message</button></div>
               </form> -->
 
-            </div>
+          </div>
         </section>
         <!-- End Contact Section -->
 
@@ -1218,14 +1219,14 @@
             <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
             <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           </div>
-          <!-- <div class="copyright">
-              &copy; Copyright <strong><span>TasteLoop</span></strong>. All
-              Rights
-              Reserved
-            </div>
-            <div class="credits">
-              Designed by <a href>Hares Islam</a>
-            </div> -->
+          <div class="copyright">
+            &copy; Copyright <strong><span>TasteLoop</span></strong>. All
+            Rights
+            Reserved
+          </div>
+          <div class="credits">
+            Designed by <a href>Hares Islam</a>
+          </div>
         </div>
       </footer>
 
