project1-data-update

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img
               src="/assets/img/tasteloop logo.png"
               alt="TasteLoop" class="img-fluid"
-              style="height: 60px; width: 80px;">
+              style="height: 40px; display: flex;">
           </a>
           <div class="logo me-auto">
             <h1><a href="index.html">Taste Loop</a></h1></div>
@@ -220,9 +220,9 @@
             <div class="col-lg-5 align-items-stretch videoUpload video-box"
               style='background-image: none; padding: 0;'>
               <video class="w-100 h-100" controls autoplay muted>
-                <source src="/assets/img/16362106-hd_1920_1080_30fps.mp4"
+                <source src="/assets/img/myresturant.mp4"
                   type="video/mp4">
-                Your browser does not support the video tag.
+                <!-- Your browser does not support the video tag. -->
               </video>
             </div>
 
@@ -269,7 +269,7 @@
         <!-- End About Section -->
 
         <!-- ======= Whu Us Section ======= -->
-        <!-- <section id="why-us" class="why-us">
+        <section id="why-us" class="why-us">
           <div class="container">
 
             <div class="section-title">
@@ -314,11 +314,11 @@
             </div>
 
           </div>
-        </section> -->
+        </section>
         <!-- End Whu Us Section -->
 
         <!-- ======= Menu Section ======= -->
-        <!-- <section id="menu" class="menu">
+        <section id="menu" class="menu">
           <div class="container">
 
             <div class="section-title">
@@ -441,7 +441,7 @@
             </div>
 
           </div>
-        </section>  -->
+        </section> 
         <!-- End Menu Section -->
 
         <!-- ======= Specials Section ======= -->
@@ -714,7 +714,7 @@
         <!-- End Events Section -->
 
         <!-- ======= Book A Table Section ======= -->
-        <!-- <section id="book-a-table" class="book-a-table">
+        <section id="book-a-table" class="book-a-table">
           <div class="container">
 
             <div class="section-title">
@@ -793,7 +793,7 @@
               </form>
 
             </div>
-          </section> -->
+          </section>
         <!-- End Book A Table Section -->
 
         <!-- ======= Gallery Section ======= -->
@@ -898,7 +898,7 @@
         <!-- End Gallery Section -->
 
         <!-- ======= Chefs Section ======= -->
-        <!-- <section id="chefs" class="chefs">
+        <section id="chefs" class="chefs">
             <div class="container">
 
               <div class="section-title">
@@ -967,7 +967,7 @@
 
             </div>
           </section> -->
-        <!-- End Chefs Section -->
+        <!-- End Chefs Section
 
         <!-- ======= Testimonials Section ======= -->
         <section id="testimonials" class="testimonials">
@@ -1120,17 +1120,17 @@
             </div>
           </div>
 
-          <!-- <div class="map">
+          <div class="map">
             <iframe style="border:0; width: 100%; height: 350px;"
               src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
               frameborder="0" allowfullscreen></iframe>
-          </div> -->
-          <div class="map">
+          </div>
+          <!-- <div class="map">
             <iframe
               style="border:0; width: 100%; overflow: hidden;height: 350px;"
               src="/assets/img/Google-Maps-How-to-Use-Street-View.webp"
               scrolling="no"></iframe>
-          </div>
+          </div> -->
 
           <div class="container mt-5">
 
@@ -1162,36 +1162,36 @@
               </div>
             </div>
 
-            <!-- <form action="forms/contact.php" method="post" role="form"
-                class="php-email-form">
-                <div class="row">
-                  <div class="col-md-6 form-group">
-                    <input type="text" name="name" class="form-control"
-                      id="name"
-                      placeholder="Your Name" required>
-                  </div>
-                  <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="email" class="form-control" name="email"
-                      id="email" placeholder="Your Email" required>
-                  </div>
+            <form action="forms/contact.php" method="post" role="form"
+              class="php-email-form">
+              <div class="row">
+                <div class="col-md-6 form-group">
+                  <input type="text" name="name" class="form-control"
+                    id="name"
+                    placeholder="Your Name" required>
                 </div>
-                <div class="form-group mt-3">
-                  <input type="text" class="form-control" name="subject"
-                    id="subject" placeholder="Subject" required>
+                <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <input type="email" class="form-control" name="email"
+                    id="email" placeholder="Your Email" required>
                 </div>
-                <div class="form-group mt-3">
-                  <textarea class="form-control" name="message" rows="5"
-                    placeholder="Message" required></textarea>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank
-                    you!</div>
-                </div>
-                <div class="text-center"><button type="submit">Send
-                    Message</button></div>
-              </form> -->
+              </div>
+              <div class="form-group mt-3">
+                <input type="text" class="form-control" name="subject"
+                  id="subject" placeholder="Subject" required>
+              </div>
+              <div class="form-group mt-3">
+                <textarea class="form-control" name="message" rows="5"
+                  placeholder="Message" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank
+                  you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Send
+                  Message</button></div>
+            </form>
 
           </div>
         </section>
