--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="d-flex align-items-center gap-3 me-auto">
           <a href="index.html" class="d-flex align-items-center">
             <img
-              src="/assets/img/tasteloop logo.png"
-              alt="TasteLoop" class="img-fluid"
+              src="/assets/img/tasteloop-logo.png"
+              alt="Logo" class="img-fluid"
               style="height: 40px; display: flex;">
           </a>
           <div class="logo me-auto">
@@ -220,9 +220,9 @@
             <div class="col-lg-5 align-items-stretch videoUpload video-box"
               style='background-image: none; padding: 0;'>
               <video class="w-100 h-100" controls autoplay muted>
-                <source src="/assets/img/myresturant.mp4"
+                <source src="/assets/img/MyResturant.mp4"
                   type="video/mp4">
-                <!-- Your browser does not support the video tag. -->
+                
               </video>
             </div>
 
