--- a/menuitem.html
+++ b/menuitem.html
@@ -70,9 +70,9 @@
         <div class="d-flex align-items-center gap-3 me-auto">
           <a href="index.html" class="d-flex align-items-center">
             <img
-              src="/assets/img/tasteloop logo.png"
+              src="/assets/img/tasteloop-logo.png"
               alt="TasteLoop" class="img-fluid"
-              style="height: 60px; width: 80px;">
+              style="height: 40px; display: flow-root;">
           </a>
           <div class="logo me-auto">
             <h1><a href="index.html">Taste Loop</a></h1></div>
